--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "owner":"Your ID",
-    "prefix":"d!",
-    "token":"NzIxNDE3NDk1Nzk3MzAxMzcw.XuUOZg.k7R7O2SVy7KqkmcZRNHT9Y3nums"   
+    "prefix":"Your Prefix",
+    "token":"Your Token"   
    }
